--- a/.github/workflows/writerside.yml
+++ b/.github/workflows/writerside.yml
@@ -11,7 +11,7 @@ permissions:
 
 env:
   INSTANCE: 'Writerside/poo'
-  ARTIFACT: 'webHelpPoo2-all.zip'
+  ARTIFACT: 'webHelpPOO2-all.zip'
   DOCKER_VERSION: '241.18775'
 
 jobs:
